--- a/styles.css
+++ b/styles.css
@@ -201,3 +201,137 @@ span{
 .hero-msg a:hover{
     color: #ba2721;
 }
+
+/* shop-section */
+
+.shop-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #d4dedf;
+    
+    
+}
+
+.box{
+    /* border: solid 2px black; */
+    height: 350px;
+    width: 23%;
+    background-color: white;
+    padding: 20px 0px 15px;
+    margin-top: 15px;
+    padding-bottom: 40px;
+    
+}
+
+.box-content{
+    margin-left: 1.2rem;
+    margin-right: 1.2rem;
+    margin-bottom: 15px;
+    
+}
+
+.box-img{
+    height: 290px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-size: cover;
+
+}
+
+.box-content p{
+    color: #324065;
+
+}
+
+/* footer panel1 */
+
+.footer{
+    margin-top: 15px;
+}
+
+.footer-panel1{
+    background-color: #485769;
+    color: white;
+    font-size: .85rem;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-panel2{
+    background-color: #232f3e;
+    color: white;
+    height: 400px;
+    /* padding-top: 4rem ;
+    padding-bottom: 4rem; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+.footer-panel2 ul{
+    list-style: none;
+}
+
+.footer-panel2 li{
+    font-size: .95rem;
+    margin: 0 0 10px;
+}
+
+.footer-panel2 li a{
+    color: #DDDDDD;
+}
+
+.footer-panel2 li a:hover{
+    text-decoration: underline;
+}
+
+.footer-panel3{
+    height: 80px;
+    background-color: #232f3e;
+    color: white;
+    border-top: .5px solid white ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.panel3-logo{
+    background-image: url(/images/amazon_logo.png);
+    background-size: cover;
+    height: 50px;
+    width: 100px;
+}
+
+
+.footer-panel4{
+    background-color: #131a22;
+    height: 90px;
+    color: white;
+    font-size: .75rem;
+    text-align: center;
+}
+
+.panel4-links{
+    padding-top: 25px;
+}
+
+.panel4-copyRight{
+    padding-top: 5px;
+}
+
+.panel4-links a{
+    color: white;
+    margin-right: 5px;
+}
+
+.panel4-links a:hover{
+    text-decoration: underline;
+}
+
+
+
+
